<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.majo.myapplication.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="242dp"
        android:layout_height="49dp"
        android:text="@string/tareas"
        android:textAlignment="center"
        android:fontFamily="cursive"
        android:textSize="30sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.139"
         />

    <Button
        android:id="@+id/boton1"
        android:text="@string/tarea_1"
        android:layout_width="283dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintVertical_bias="0.135" />

    <Button
        android:id="@+id/boton2"
        android:text="@string/tarea_2"
        android:layout_width="283dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@+id/boton1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintVertical_bias="0.16" />

    <Button
        android:id="@+id/boton3"
        android:text="@string/tarea_3"
        android:layout_width="283dp"
        android:layout_height="43dp"
        android:layout_marginTop="0dp"
        android:onClick="onClick"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@+id/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintVertical_bias="0.247" />

<!--Last edit: 4/apr-->


</android.support.constraint.ConstraintLayout>
