<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.majo.myapplication.Tarea2">

    <TextView
        android:text="@string/tarea2"
        android:layout_width="364dp"
        android:layout_height="69dp"
        android:id="@+id/textView4"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/botonVolver"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="242dp"
        android:layout_height="49dp"
        android:text="@string/sumar2numeros"
        android:textAlignment="center"
        android:fontFamily="cursive"
        android:textSize="30sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.082"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="16dp"
        android:layout_height="36dp"
        android:text="@string/signomas"
        android:textSize="25sp"
        android:fontFamily="monospace"
        android:textAlignment="center"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toLeftOf="@+id/editText2"
        app:layout_constraintLeft_toRightOf="@+id/editText1"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.142"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintBottom_toBottomOf="parent" />

    <EditText
        android:id="@+id/editText1"
        android:hint="@string/hintSuma"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:inputType="numberDecimal"
        android:fontFamily="monospace"
        android:textAlignment="center"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.082"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editText2"
        android:hint="@string/hintSuma"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:inputType="numberDecimal"
        android:fontFamily="monospace"
        android:textAlignment="center"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.776"
        app:layout_constraintVertical_bias="0.082"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/botonIgual"
        android:text="@string/signoIgual"
        android:layout_width="89dp"
        android:layout_height="64dp"
        android:onClick="onClick"
        android:textSize="25sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="38dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.157"
        app:layout_constraintHorizontal_bias="0.501" />

    <Button
        android:id="@+id/botonVolver"
        android:text="@string/volver"
        android:layout_width="283dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:onClick="onClick"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/botonIgual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintVertical_bias="0.724" />

</android.support.constraint.ConstraintLayout>
